--- a/index.html
+++ b/index.html
@@ -426,6 +426,28 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <form class="subscribe-form" name="subscribe_field" autocomplete="on">
+            <label class="subscribe-form-lable" for="subscribe_field_name"
+              ><span class="subscribe-text">Subscribe</span></label
+            >
+            <div class="subscribe-container">
+              <input
+                class="subscribe-form-input"
+                type="email"
+                name="subscribe_field_name"
+                id="subscribe_field_name"
+                placeholder="E-mail"
+              />
+              <button class="subscribe-button btn-hero" type="submit">
+                <span class="btn-title">Subscribe</span>
+                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
+                  <use href="./images/icons.svg#icon-footer-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- Modal window -->
@@ -441,8 +463,60 @@
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
+
+        <stonge class="modal-title">Leave your contacts and we will call you back</stonge>
+        <form class="modal-window-form" name="register_form">
+          <div class="modal-input-container">
+            <label class="modal-form-lable" for="register_form_name" id="register_form_name"
+              ><span class="lable-text">Name</span>
+            </label>
+            <div class="modal-form-field">
+              <input class="modal-form-input" type="text" name="register_form_name" />
+              <svg class="modal-input-icons" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
+            <label class="modal-form-lable" for="register_form_tel" id="register_form_tel"
+              ><span class="lable-text">Phone</span>
+            </label>
+            <div class="modal-form-field">
+              <input class="modal-form-input" type="tel" name="register_form_tel" />
+              <svg class="modal-input-icons" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+            <label class="modal-form-lable" for="register_form_mail" id="register_form_mail"
+              ><span class="lable-text">Email</span>
+            </label>
+            <div class="modal-form-field">
+              <input class="modal-form-input" type="email" name="register_forme_mail" />
+              <svg class="modal-input-icons" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+            <label >
+              <span class="lable-text">Comment</span>
+              <textarea name="user-message" rows="10" placeholder="Text input"></textarea>
+            </label>
+          </div>
+
+          <label class="modal-form-agreement">
+            <input class="modal-form-agreement-checkbox visually-hidden" type="checkbox" name="user-agreement" />
+            <svg class="modal-form-custom-checkbox" width="16" height="16">
+              <use class="modal-form-icon-noactiv" href="./images/icons.svg#icon-uncheck"></use>
+              <use class="modal-form-icon-active" href="./images/icons.svg#icon-check"></use>
+            </svg>
+            <span class="modal-form-agreement-desc"
+              >I accept the terms and conditions of the
+              <a href="" class="modal-form-agreement-link">Privacy Policy</a></span
+            >
+    
+          </label>
+          <button class="modal-form-btn" type="submit"><span class="modal-form-btn-next">Send</span></button>
+        </form>
       </div>
     </div>
+
     <!-- /Modal window -->
     <script src="./modal.js"></script>
   </body>
