--- a/index.html
+++ b/index.html
@@ -464,11 +464,11 @@
           </svg>
         </button>
 
-        <stonge class="modal-title">Leave your contacts and we will call you back</stonge>
+        <strong class="modal-title">Leave your contacts and we will call you back</strong>
         <form class="modal-window-form" name="register_form">
           <div class="modal-input-container">
-            <label class="modal-form-lable" for="register_form_name" id="register_form_name"
-              ><span class="lable-text">Name</span>
+            <label class="modal-form-lable">
+              <span class="lable-text">Name</span>
             </label>
             <div class="modal-form-field">
               <input class="modal-form-input" type="text" name="register_form_name" />
@@ -476,8 +476,7 @@
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
-            <label class="modal-form-lable" for="register_form_tel" id="register_form_tel"
-              ><span class="lable-text">Phone</span>
+            <label class="modal-form-lable"><span class="lable-text">Phone</span>
             </label>
             <div class="modal-form-field">
               <input class="modal-form-input" type="tel" name="register_form_tel" />
@@ -485,8 +484,7 @@
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
-            <label class="modal-form-lable" for="register_form_mail" id="register_form_mail"
-              ><span class="lable-text">Email</span>
+            <label class="modal-form-lable"><span class="lable-text">Email</span>
             </label>
             <div class="modal-form-field">
               <input class="modal-form-input" type="email" name="register_forme_mail" />
