--- a/index.html
+++ b/index.html
@@ -426,10 +426,13 @@
             </li>
           </ul>
         </div>
+
+
         <div class="subscribe">
+          <p class="subscribe-text">Subscribe</>
           <form class="subscribe-form" name="subscribe_field" autocomplete="on">
             <label class="subscribe-form-lable" for="subscribe_field_name"
-              ><span class="subscribe-text">Subscribe</span></label
+              ></label
             >
             <div class="subscribe-container">
               <input
