--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
 
         <div class="subscribe">
-          <p class="subscribe-text">Subscribe</>
+          <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form" name="subscribe_field" autocomplete="on">
             <label class="subscribe-form-lable" for="subscribe_field_name"
               ></label
