--- a/index.html
+++ b/index.html
@@ -431,24 +431,21 @@
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form" name="subscribe_field" autocomplete="on">
-            <label class="subscribe-form-lable" for="subscribe_field_name"
-              ></label
-            >
-            <div class="subscribe-container">
+            <label class="subscribe-form-lable">
               <input
                 class="subscribe-form-input"
                 type="email"
                 name="subscribe_field_name"
-                id="subscribe_field_name"
                 placeholder="E-mail"
               />
-              <button class="subscribe-button btn-hero" type="submit">
+            </label>
+            <button class="subscribe-button btn-hero" type="submit">
                 <span class="btn-title">Subscribe</span>
                 <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
                   <use href="./images/icons.svg#icon-footer-send"></use>
                 </svg>
-              </button>
-            </div>
+            </button>
+            
           </form>
         </div>
       </div>
