--- a/portfolio.html
+++ b/portfolio.html
@@ -274,35 +274,57 @@
         <div class="footer-social-kontainer">
           <p class="footer-link-topic">Social media</p>
           <ul class="team-sociale-list footer-social-list">
-            <li class="team-sociale-item">
+            <li class="footer-sociale-item">
               <a class="footer-social-link" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="team-social-icons" width="24" height="24" fill="#F4F4FD">
+                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-sociale-item">
+            <li class="footer-sociale-item">
               <a class="footer-social-link" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="team-social-icons" width="24" height="24" fill="#F4F4FD">
+                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-sociale-item">
+            <li class="footer-sociale-item">
               <a class="footer-social-link" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="team-social-icons" width="24" height="24" fill="#F4F4FD">
+                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-sociale-item">
+            <li class="footer-sociale-item">
               <a class="footer-social-link" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="team-social-icons" width="24" height="24" fill="#F4F4FD">
+                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
+
+
+        <div class="subscribe">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="subscribe-form" name="subscribe_field" autocomplete="on">
+            <label class="subscribe-form-lable">
+              <input
+                class="subscribe-form-input"
+                type="email"
+                name="subscribe_field_name"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-button btn-hero" type="submit">
+                <span class="btn-title">Subscribe</span>
+                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
+                  <use href="./images/icons.svg#icon-footer-send"></use>
+                </svg>
+            </button>
+            
+          </form>
         </div>
       </div>
     </footer>
