--- a/portfolio.html
+++ b/portfolio.html
@@ -313,7 +313,7 @@
               <input
                 class="subscribe-form-input"
                 type="email"
-                name="subscribe_field_name"
+                name="subscribe_field"
                 placeholder="E-mail"
               />
             </label>
