--- a/index.html
+++ b/index.html
@@ -464,33 +464,38 @@
           </svg>
         </button>
 
-        <strong class="modal-title">Leave your contacts and we will call you back</strong>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-window-form" name="register_form">
+          
           <div class="modal-input-container">
-            <label class="modal-form-lable">
+            <label class="modal-form-lable" for="user-name">
               <span class="lable-text">Name</span>
             </label>
             <div class="modal-form-field">
-              <input class="modal-form-input" type="text" name="register_form_name" />
+              <input class="modal-form-input" type="text" id="user-name" name="user-name" />
               <svg class="modal-input-icons" width="18" height="18">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
-            <label class="modal-form-lable"><span class="lable-text">Phone</span>
-            </label>
-            <div class="modal-form-field">
-              <input class="modal-form-input" type="tel" name="register_form_tel" />
-              <svg class="modal-input-icons" width="18" height="18">
-                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-              </svg>
+            <div class="modal-input-container">
+              <label class="modal-form-lable" for="user-name"></label>><span class="lable-text">Phone</span>
+              </label>
+              <div class="modal-form-field">
+                <input class="modal-form-input" type="tel" id="user-name" name="user-name" />
+                <svg class="modal-input-icons" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                </svg>
+              </div>
             </div>
-            <label class="modal-form-lable"><span class="lable-text">Email</span>
-            </label>
-            <div class="modal-form-field">
-              <input class="modal-form-input" type="email" name="register_forme_mail" />
-              <svg class="modal-input-icons" width="18" height="18">
-                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-              </svg>
+            <div class="modal-input-container">
+              <label class="modal-form-lable" for="user-name"></label>><span class="lable-text">Email</span>
+              </label>
+              <div class="modal-form-field">
+                <input class="modal-form-input" type="email" id="user-name" name="user-name" />
+                <svg class="modal-input-icons" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                </svg>
+              </div>
             </div>
             <label >
               <span class="lable-text">Comment</span>
