--- a/index.html
+++ b/index.html
@@ -431,9 +431,10 @@
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form" name="subscribe_field" autocomplete="on">
-            <label class="subscribe-form-lable">
+            <label class="subscribe-form-lable" for="subscribe-form-input">
               <input
                 class="subscribe-form-input"
+                id="subscribe-form-input"
                 type="email"
                 name="subscribe_field_name"
                 placeholder="E-mail"
@@ -478,26 +479,25 @@
               </svg>
             </div>
             <div class="modal-input-container">
-              <label class="modal-form-lable" for="user-name"></label>><span class="lable-text">Phone</span>
+              <label class="modal-form-lable" for="user-pohne"><span class="lable-text">Phone</span>
               </label>
               <div class="modal-form-field">
-                <input class="modal-form-input" type="tel" id="user-name" name="user-name" />
+                <input class="modal-form-input" type="tel" id="user-pohne" name="user-pohne" />
                 <svg class="modal-input-icons" width="18" height="18">
                   <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                 </svg>
               </div>
             </div>
             <div class="modal-input-container">
-              <label class="modal-form-lable" for="user-name"></label>><span class="lable-text">Email</span>
-              </label>
+              <label class="modal-form-lable" for="user-mail"><span class="lable-text">Email</span></label>
               <div class="modal-form-field">
-                <input class="modal-form-input" type="email" id="user-name" name="user-name" />
+                <input class="modal-form-input" type="email" id="user-mail" name="user-mail" />
                 <svg class="modal-input-icons" width="18" height="18">
                   <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                 </svg>
               </div>
             </div>
-            <label >
+            <label>
               <span class="lable-text">Comment</span>
               <textarea name="user-message" rows="10" placeholder="Text input"></textarea>
             </label>
