--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             </label>
             <button class="subscribe-button btn-hero" type="submit">
                 <span class="btn-title">Subscribe</span>
-                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
+                <svg class="footer-social-icon" width="24" height="24" fill="#F4F4FD">
                   <use href="./images/icons.svg#icon-footer-send"></use>
                 </svg>
             </button>
