--- a/index.html
+++ b/index.html
@@ -478,7 +478,8 @@
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
-            <div class="modal-input-container">
+          </div>
+          <div class="modal-input-container">
               <label class="modal-form-lable" for="user-pohne"><span class="lable-text">Phone</span>
               </label>
               <div class="modal-form-field">
@@ -487,8 +488,8 @@
                   <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                 </svg>
               </div>
-            </div>
-            <div class="modal-input-container">
+          </div>
+          <div class="modal-input-container">
               <label class="modal-form-lable" for="user-mail"><span class="lable-text">Email</span></label>
               <div class="modal-form-field">
                 <input class="modal-form-input" type="email" id="user-mail" name="user-mail" />
@@ -511,9 +512,7 @@
             </svg>
             <span class="modal-form-agreement-desc"
               >I accept the terms and conditions of the
-              <a href="" class="modal-form-agreement-link">Privacy Policy</a></span
-            >
-    
+              <a href="" class="modal-form-agreement-link">Privacy Policy</a></span>
           </label>
           <button class="modal-form-btn" type="submit"><span class="modal-form-btn-next">Send</span></button>
         </form>
