--- a/index.html
+++ b/index.html
@@ -499,11 +499,11 @@
               </div>
             </div>
 
-            <div class="modal-input-container">
-              <label>
+            <div class="text-box">
+              <label class="modal-form-lable" for="user-comment">
                 <span class="lable-text">Comment</span>
-                <textarea name="user-message" rows="10" placeholder="Text input"></textarea>
               </label>
+              <textarea name="user-comment" id="user-comment" rows="10" placeholder="Text input"></textarea>
             </div>
         
 
