--- a/index.html
+++ b/index.html
@@ -503,21 +503,23 @@
               <label class="modal-form-lable" for="user-comment">
                 <span class="lable-text">Comment</span>
               </label>
-              <textarea name="user-comment" id="user-comment" rows="10" placeholder="Text input"></textarea>
+              <textarea class="text-comment" name="user-comment" id="user-comment" rows="10" placeholder="Text input"></textarea>
             </div>
         
 
-          <label class="modal-form-agreement">
-            <input class="modal-form-agreement-checkbox visually-hidden" type="checkbox" name="user-agreement" />
-            <svg class="modal-form-custom-checkbox" width="16" height="16">
-              <use class="modal-form-icon-noactiv" href="./images/icons.svg#icon-uncheck"></use>
-              <use class="modal-form-icon-active" href="./images/icons.svg#icon-check"></use>
-            </svg>
-            <span class="modal-form-agreement-desc"
-              >I accept the terms and conditions of the
-              <a href="" class="modal-form-agreement-link">Privacy Policy</a></span>
-          </label>
-          <button class="modal-form-btn" type="submit"><span class="modal-form-btn-next">Send</span></button>
+          <div class="agreement-box">
+              <input class="modal-form-agreement-checkbox visually-hidden" value="true" type="checkbox" name="user-privacy" id="user-privacy" />
+              <svg class="modal-form-custom-checkbox" width="16" height="16">
+                <use class="modal-form-icon-noactiv" href="./images/icons.svg#icon-uncheck"></use>
+                <use class="modal-form-icon-active" href="./images/icons.svg#icon-check"></use>
+              </svg>
+              <label class="modal-form-agreement" for="user-privacy">
+                <span class="modal-form-agreement-desc"
+                >I accept the terms and conditions of the
+                <a href="" class="modal-form-agreement-link">Privacy Policy</a></span>
+            </label>
+          </div>
+          <button class="modal-form-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
