--- a/index.html
+++ b/index.html
@@ -509,15 +509,17 @@
 
           <div class="agreement-box">
               <input class="modal-form-agreement-checkbox visually-hidden" value="true" type="checkbox" name="user-privacy" id="user-privacy" />
-              <svg class="modal-form-custom-checkbox" width="16" height="16">
-                <use class="modal-form-icon-noactiv" href="./images/icons.svg#icon-uncheck"></use>
-                <use class="modal-form-icon-active" href="./images/icons.svg#icon-check"></use>
-              </svg>
               <label class="modal-form-agreement" for="user-privacy">
-                <span class="modal-form-agreement-desc"
-                >I accept the terms and conditions of the
-                <a href="" class="modal-form-agreement-link">Privacy Policy</a></span>
+                <span class="icon-agreement-box">
+                  <svg class="modal-form-custom-checkbox" width="10" height="8">
+                    <use class="modal-form-icon-active" href="./images/icons.svg#icon-chek-box"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a href="" class="modal-form-agreement-link">Privacy Policy</a>
+                
             </label>
+              
           </div>
           <button class="modal-form-btn" type="submit">Send</button>
         </form>
