--- a/index.html
+++ b/index.html
@@ -431,15 +431,16 @@
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form" name="subscribe_field" autocomplete="on">
-            <label class="subscribe-form-lable" for="subscribe-form-input">
+            <label class="subscribe-form-lable" for="subscribe_field_name">
+            </label>
               <input
                 class="subscribe-form-input"
-                id="subscribe-form-input"
+                id="subscribe_field_name"
                 type="email"
                 name="subscribe_field_name"
                 placeholder="E-mail"
               />
-            </label>
+            
             <button class="subscribe-button btn-hero" type="submit">
               <span class="btn-title">Subscribe</span>
               <svg class="footer-social-icon" width="24" height="24">
