--- a/index.html
+++ b/index.html
@@ -430,16 +430,9 @@
 
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
-          <form class="subscribe-form" name="subscribe_field" autocomplete="on">
-            <label class="subscribe-form-lable" for="subscribe_field_name">
-            
-              <input
-                class="subscribe-form-input"
-                id="subscribe_field_name"
-                type="email"
-                name="subscribe_field_name"
-                placeholder="E-mail"
-              />
+        <form class="subscribe-form" name="subscribe-field">
+            <label class="subscribe-form-lable" for="subscribe-field">
+              <input class="subscribe-form-input" type="email" name="subscribe-field" id="subscribe_field" placeholder="E-mail">
             </label>
             
             <button class="subscribe-button btn-hero" type="submit">
