--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
         <form class="subscribe-form" name="subscribe-field">
-            <label class="subscribe-form-lable" for="subscribe-field">
-              <input class="subscribe-form-input" type="email" name="subscribe-field" id="subscribe_field" placeholder="E-mail">
+            <label class="subscribe-form-lable" for="subscribe-field-meil">
+              <input class="subscribe-form-input" type="email" name="subscribe-field-meil" id="subscribe-field-meil" placeholder="E-mail" />
             </label>
             
             <button class="subscribe-button btn-hero" type="submit">
