--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
               <input class="subscribe-form-input" type="email" name="subscribe-field-meil" id="subscribe-field-meil" placeholder="E-mail" />
             </label>
             
-            <button class="subscribe-button btn-hero" type="submit">
+            <button class="subscribe-button" type="submit">
               <span class="btn-title">Subscribe</span>
               <svg class="footer-social-icon" width="24" height="24">
                 <use class="modal-form-icon-noactiv" href="./images/icons.svg#icon-footer-send"></use>
