--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             </label>
             
             <button class="subscribe-button" type="submit">
-              <span class="btn-title">Subscribe</span>
+              Subscribe
               <svg class="footer-social-icon" width="24" height="24">
                 <use class="modal-form-icon-noactiv" href="./images/icons.svg#icon-footer-send"></use>
               </svg>
