--- a/portfolio.html
+++ b/portfolio.html
@@ -308,20 +308,16 @@
 
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
-          <form class="subscribe-form" name="subscribe_field" autocomplete="on">
-            <label class="subscribe-form-lable">
-              <input
-                class="subscribe-form-input"
-                type="email"
-                name="subscribe_field_name"
-                placeholder="E-mail"
-              />
+        <form class="subscribe-form" name="subscribe-field">
+            <label class="subscribe-form-lable" for="subscribe-field-meil">
+              <input class="subscribe-form-input" type="email" name="subscribe-field-meil" id="subscribe-field-meil" placeholder="E-mail" />
             </label>
-            <button class="subscribe-button btn-hero" type="submit">
-                <span class="btn-title">Subscribe</span>
-                <svg class="footer-social-icons" width="24" height="24" fill="#F4F4FD">
-                  <use href="./images/icons.svg#icon-footer-send"></use>
-                </svg>
+            
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="footer-social-icon" width="24" height="24">
+                <use class="modal-form-icon-noactiv" href="./images/icons.svg#icon-footer-send"></use>
+              </svg>
             </button>
             
           </form>
