--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
           <p class="subscribe-text">Subscribe</p>
         <form class="subscribe-form" name="subscribe-field">
             <label class="subscribe-form-lable" for="subscribe-field-meil">
-              <input class="subscribe-form-input" type="email" name="subscribe-field-meil" id="subscribe-field-meil" placeholder="E-mail" />
+              <input class="subscribe-form-input" type="email" required name="subscribe-field-meil" id="subscribe-field-meil" placeholder="E-mail" />
             </label>
             
             <button class="subscribe-button" type="submit">
@@ -468,7 +468,7 @@
               <span class="lable-text">Name</span>
             </label>
             <div class="modal-form-field">
-              <input class="modal-form-input" type="text" id="user-name" name="user-name" />
+              <input class="modal-form-input" type="text" required id="user-name" name="user-name" />
               <svg class="modal-input-icons" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
@@ -478,7 +478,7 @@
               <label class="modal-form-lable" for="user-pohne"><span class="lable-text">Phone</span>
               </label>
               <div class="modal-form-field">
-                <input class="modal-form-input" type="tel" id="user-pohne" name="user-pohne" />
+                <input class="modal-form-input" type="phone" required id="user-pohne" name="user-pohne" />
                 <svg class="modal-input-icons" width="18" height="24">
                   <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                 </svg>
@@ -487,7 +487,7 @@
           <div class="modal-input-container">
               <label class="modal-form-lable" for="user-mail"><span class="lable-text">Email</span></label>
               <div class="modal-form-field">
-                <input class="modal-form-input" type="email" id="user-mail" name="user-mail" />
+                <input class="modal-form-input" type="email" required id="user-mail" name="user-mail" />
                 <svg class="modal-input-icons" width="18" height="24">
                   <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                 </svg>
